第二次提交

--- a/public/admin/profile.html
+++ b/public/admin/profile.html
@@ -1,3 +1,11 @@
+<!-- 拦截登录 -->
+<script src="/login/status"></script>
+<script>
+if(!isLogin){
+  location.href = 'login.html'
+}
+</script>
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
