--- a/public/admin/categories.html
+++ b/public/admin/categories.html
@@ -1,3 +1,10 @@
+<!-- 拦截登录 -->
+<script src="/login/status"></script>
+<script>
+if(!isLogin){
+  location.href = 'login.html'
+}
+</script>
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -29,16 +36,16 @@
         <strong>错误！</strong>发生XXX错误
       </div> -->
       <div class="row">
-        <div class="col-md-4">
-          <form>
+        <div class="col-md-4" id="modifyCateg">
+          <form id="categoriesAdd">
             <h2>添加分类</h2>
             <div class="form-group">
               <label>名称</label>
-              <input class="form-control" type="text" placeholder="请输入分类名称">
+              <input class="form-control" type="text" placeholder="请输入分类名称" name="title">
             </div>
             <div class="form-group">
               <label>图标</label>
-              <input class="form-control" type="text" placeholder="请输入分类图标类名">
+              <input class="form-control" name="className" type="text" placeholder="请输入分类图标类名">
             </div>
             <div class="form-group">
               <button class="btn btn-primary" type="submit">添加</button>
@@ -49,7 +56,7 @@
           <!-- <div class="page-action">
             <a class="btn btn-danger btn-sm" href="javascript:;">批量删除</a>
           </div> -->
-          <table class="table table-striped table-bordered table-hover">
+          <table class="table table-striped table-bordered table-hover" id="editbox">
             <thead>
               <tr>
                 <th class="text-center" width="40"><input type="checkbox"></th>
@@ -57,31 +64,7 @@
                 <th class="text-center" width="100">操作</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td class="text-center"><input type="checkbox"></td>
-                <td>奇趣事</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center"><input type="checkbox"></td>
-                <td>潮科技</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center"><input type="checkbox"></td>
-                <td>奇趣事</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
+            <tbody id="tbody">
             </tbody>
           </table>
         </div>
@@ -127,6 +110,37 @@
   </div>
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/js/categories.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
   <script>NProgress.done()</script>
+  <script type="text/html" id="categoriesTel">
+    {{each data}}
+    <tr>
+      <td class="text-center"><input type="checkbox"></td>
+      <td>{{$value.title}}</td>
+      <td class="text-center">
+        <a href="javascript:;" class="btn btn-info btn-xs edit" data-id ='{{$value._id}}'>编辑</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs delete">删除</a>
+      </td>
+    </tr>
+    {{/each}}
+  </script>
+  <script type="text/html" id="modifyBox">
+  
+    <form id="categoriesEdit" data-id="{{_id}}">
+      <h2>修改分类</h2>
+      <div class="form-group">
+        <label>名称</label>
+        <input class="form-control" value = '{{title}}' type="text" placeholder="请输入分类名称" name="title">
+      </div>
+      <div class="form-group">
+        <label>图标</label>
+        <input class="form-control" name="className" value='{{className}}' type="text" placeholder="请输入分类图标类名">
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">修改</button>
+      </div>
+    </form>
+  </script>
 </body>
 </html>
