--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -1,3 +1,10 @@
+<!-- 拦截登录 -->
+<script src="/login/status"></script>
+<script>
+if(!isLogin){
+  location.href = 'login.html'
+}
+</script>
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -39,12 +46,12 @@
           </select>
           <button class="btn btn-default btn-sm">筛选</button>
         </form>
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
+        <ul class="pagination pagination-sm pull-right" id="postsPage">
+          <!-- <li><a href="#">上一页</a></li>
           <li><a href="#">1</a></li>
           <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+          <li><a href="#">下一页</a></li> -->
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -58,40 +65,9 @@
             <th class="text-center" width="100">操作</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
+        <tbody id="tbody">
+        
+         
         </tbody>
       </table>
     </div>
@@ -136,6 +112,34 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/js/posts.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script type="text/html" id="postsTel">
+    {{each data.records}}
+    <tr>
+      <td>{{$value.title}}</td>
+      <td>{{$value.author.nickName}}</td>
+      <td>{{$value.category.title}}</td>
+      <td class="text-center">{{$imports.createDate($value.createAt)}}</td>
+      <td class="text-center" >{{$value.state== 1 ? "已发布" :"未发布"}}</td>
+      <td class="text-center">
+        <a href="javascript:;" class="btn btn-default btn-xs" data-id="{{$value._id}}">编辑</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+      </td>
+    </tr>
+    {{/each}}
+  </script>
+  <script type="text/html" id="pageTel">
+    {{if  data.page>1}}
+    <li><a href="javascript:;" onclick="changPage({{data.page-1}})">上一页</a></li>
+    {{/if}}
+   {{each data.display}}
+    <li><a href="javascript:;" onclick="changPage({{$value}})">{{$value}}</a></li>
+    {{/each}}
+    {{if data.page<data.pages}}
+    <li><a href="javascript:;" onclick="changPage({{data.page+1}})">下一页</a></li>
+    {{/if}}
+  </script>
   <script>NProgress.done()</script>
 </body>
 </html>
