--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -79,12 +79,12 @@
         <div class="col-md-8">
           <div class="page-action">
             <!-- show when multiple checked -->
-            <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
+            <a class="btn btn-danger btn-sm deleteMany" href="javascript:;" style="display: none">批量删除</a>
           </div>
           <table class="table table-striped table-bordered table-hover" id="multipleUser">
             <thead>
                <tr>
-                <th class="text-center" width="40"><input type="checkbox"></th>
+                <th class="text-center" width="40"><input type="checkbox" id='selectAll'></th>
                 <th class="text-center" width="80">头像</th>
                 <th>邮箱</th>
                 <th>昵称</th>
@@ -147,7 +147,7 @@
   <script type="text/html" id="userTpl">
     {{each data}}
            <tr>
-                <td class="text-center"><input type="checkbox"></td>
+                <td class="text-center"><input type="checkbox" class = 'checkbox' data-id="{{$value._id}}"></td>
                 {{if $value.avatar}}
                 <td class="text-center"><img class="avatar" src="{{$value.avatar}}"></td>
                 {{else}}
@@ -159,7 +159,7 @@
                 <td>{{$value.role == 'admin' ? '超级管理员' : '普通用户'}}</td>
                 <td class="text-center">
                   <a href="javascript:;" id = 'edit' class="btn btn-default btn-xs" data-id="{{$value._id}}">编辑</a>
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+                  <a href="javascript:;" id = 'delete' class="btn btn-danger btn-xs">删除</a>
                 </td>
               </tr> 
   {{/each}}
