--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -40,9 +40,9 @@ if(!isLogin){
               <h3 class="panel-title">站点内容统计：</h3>
             </div>
             <ul class="list-group">
-              <li class="list-group-item"><strong>10</strong>篇文章（<strong>2</strong>篇草稿）</li>
-              <li class="list-group-item"><strong>6</strong>个分类</li>
-              <li class="list-group-item"><strong>5</strong>条评论（<strong>1</strong>条待审核）</li>
+              <li class="list-group-item posts"><strong>10</strong>篇文章（<strong>2</strong>篇草稿）</li>
+              <li class="list-group-item category"><strong>6</strong>个分类</li>
+              <li class="list-group-item comments"><strong>5</strong>条评论（<strong>1</strong>条待审核）</li>
             </ul>
           </div>
         </div>
@@ -91,7 +91,9 @@ if(!isLogin){
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/js/common.js"></script>
+  <script src="../assets/js/index.js"></script>
   <script>NProgress.done()</script>
- <script src="../assets/js/common.js"></script>
+ 
 </body>
 </html>
