--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -35,45 +35,47 @@ if(!isLogin){
       <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-      <form class="row" id="addForm">
-        <div class="col-md-9">
-          <div class="form-group">
-            <label for="title">标题</label>
-            <input id="title" class="form-control input-lg" type="text" placeholder="文章标题" name="title">
+      <div id="box">
+        <form class="row" id="addForm">
+          <div class="col-md-9">
+            <div class="form-group">
+              <label for="title">标题</label>
+              <input id="title" class="form-control input-lg" type="text" placeholder="文章标题" name="title">
+            </div>
+            <div class="form-group">
+              <label for="content">内容</label>
+              <textarea id="content" class="form-control input-lg" cols="30" rows="10" placeholder="内容" name="content"></textarea>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="content">内容</label>
-            <textarea id="content" class="form-control input-lg" cols="30" rows="10" placeholder="内容" name="content"></textarea>
+          <div class="col-md-3">
+            <div class="form-group">
+              <label for="feature">文章封面</label>
+              <!-- show when image chose -->
+              <img class="help-block thumbnail" style="display: none">
+              <input id="feature" class="form-control" type="file">
+              <input type="hidden" name="thumbnail" id="thumbnail">
+            </div>
+            <div class="form-group">
+              <label for="category">所属分类</label>
+              <select id="category" class="form-control" name="category"></select>
+            </div>
+            <div class="form-group">
+              <label for="created">发布时间</label>
+              <input id="created" class="form-control" type="date" name="createAt">
+            </div>
+            <div class="form-group">
+              <label for="status">状态</label>
+              <select id="status" class="form-control" name="state">
+                <option value="0">草稿</option>
+                <option value="1">已发布</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <button class="btn btn-primary" type="submit">保存</button>
+            </div>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="form-group">
-            <label for="feature">文章封面</label>
-            <!-- show when image chose -->
-            <img class="help-block thumbnail" style="display: none">
-            <input id="feature" class="form-control" type="file">
-            <input type="hidden" name="thumbnail" id="thumbnail">
-          </div>
-          <div class="form-group">
-            <label for="category">所属分类</label>
-            <select id="category" class="form-control" name="category"></select>
-          </div>
-          <div class="form-group">
-            <label for="created">发布时间</label>
-            <input id="created" class="form-control" type="date" name="createAt">
-          </div>
-          <div class="form-group">
-            <label for="status">状态</label>
-            <select id="status" class="form-control" name="state">
-              <option value="0">草稿</option>
-              <option value="1">已发布</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <button class="btn btn-primary" type="submit">保存</button>
-          </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
 
@@ -123,6 +125,56 @@ if(!isLogin){
     {{each data}}
     <option value="{{$value._id}}">{{$value.title}}</option>
     {{/each}}
+  </script>
+  <!-- 修改文章模板引擎 -->
+  <script type="txet/html" id="modifyActicle">
+    <form class="row" id="editForm" data-id ={{resut._id}}>
+      <div class="col-md-9">
+        <div class="form-group">
+          <label for="title">标题</label>
+          <input id="title" class="form-control input-lg" type="text" value="{{resut.title}}" placeholder="文章标题" name="title">
+        </div>
+        <div class="form-group">
+          <label for="content">内容</label>
+          <textarea id="content" class="form-control input-lg" cols="30" rows="10" placeholder="内容" name="content">
+              {{resut.content}}
+          </textarea>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="feature">文章封面</label>
+          <!-- show when image chose -->
+          <img class="help-block thumbnail" style="display: none">
+          <input id="feature" class="form-control" type="file">
+          <input type="hidden" name="thumbnail" id="thumbnail" value={{resut.thumbnail}}>
+        </div>
+        <div class="form-group">
+          <label for="category">所属分类</label>
+          <select id="category" class="form-control" name="category">
+           
+            {{each }}
+            <option  {{resut.category == $value._id  ? 'selected' : ''}} value="{{$value._id}}">{{$value.title}}</option>
+            {{/each}}
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="created">发布时间</label>
+          <input id="created" class="form-control" type="date" name="createAt" value={{$imports.createDate(resut.createAt)}}>
+        </div>
+        <div class="form-group">
+          <label for="status">状态</label>
+          <select id="status" class="form-control" name="state">
+           
+            <option value="0" {{resut.state == 0 ? 'selected' : ''}}>草稿</option>
+            <option value="1" {{resut.state == 1 ? 'selected' : ''}}>已发布</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary" type="submit">保存</button>
+        </div>
+      </div>
+    </form>
   </script>
   <script src="../assets/js/postAdd.js"></script>
   <script>NProgress.done()</script>
