--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -35,23 +35,18 @@ if(!isLogin){
       <div class="page-action">
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
-        <form class="form-inline">
-          <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
-          </select>
-          <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+        <form class="form-inline" id="fliterForm">
+          <select name="category" class="form-control input-sm" id="categoryAll">
+            
+          </select> 
+          <select name="state" class="form-control input-sm">
+            <option value="0">草稿</option>
+            <option value="1">已发布</option>
           </select>
           <button class="btn btn-default btn-sm">筛选</button>
         </form>
         <ul class="pagination pagination-sm pull-right" id="postsPage">
-          <!-- <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li> -->
+         
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -109,7 +104,6 @@ if(!isLogin){
       </li>
     </ul>
   </div>
-
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/js/posts.js"></script>
@@ -123,12 +117,13 @@ if(!isLogin){
       <td class="text-center">{{$imports.createDate($value.createAt)}}</td>
       <td class="text-center" >{{$value.state== 1 ? "已发布" :"未发布"}}</td>
       <td class="text-center">
-        <a href="javascript:;" class="btn btn-default btn-xs" data-id="{{$value._id}}">编辑</a>
-        <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+        <a href="post-add.html?id={{$value._id}}" class="btn btn-default btn-xs" data-id="{{$value._id}}">编辑</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id="{{$value._id}}">删除</a>
       </td>
     </tr>
     {{/each}}
   </script>
+  <!-- 分页模板引擎 -->
   <script type="text/html" id="pageTel">
     {{if  data.page>1}}
     <li><a href="javascript:;" onclick="changPage({{data.page-1}})">上一页</a></li>
@@ -139,6 +134,12 @@ if(!isLogin){
     {{if data.page<data.pages}}
     <li><a href="javascript:;" onclick="changPage({{data.page+1}})">下一页</a></li>
     {{/if}}
+  </script>
+  <!-- 分类模板 -->
+  <script type="text/html" id="categroryTel">
+    {{each data}}
+    <option value="{{$value._id}}">{{$value.title}}</option>
+    {{/each}}
   </script>
   <script>NProgress.done()</script>
 </body>
